[tool.poetry]
name = "sea-surface-temperature-analysis"
version = "0.1.0"
description = "Analyzes and visualizes global sea surface temperature using Argo float data"
authors = ["Mike Staub <github@planetary.family>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
argopy = "^0.1.12"
numpy = "^1.21.0"
matplotlib = "^3.4.3"
pandas = "^1.3.0"
xarray = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]